# kronos-nvidia

./: .gitignore  KRONOS_LARGE_REQUEST.md  Makefile  README.md  env.example  pyproject.toml
data/: build_indian_corpus.py  fetch_nifty50.py  fetch_nse_full.py  generate_sample.py
docker/: Dockerfile  docker-compose.brev.yml  docker-compose.yml
examples/: nifty50_forecast.py
finetune/: nifty_config.py
nvidia/: api_server.py
nvidia/backtest/: run_audit.py  walk_forward.py
nvidia/brev/: README.md  finetune.md
nvidia/triton/: README.md
nvidia/triton/model_repository/kronos_predictor/: config.pbtxt
nvidia/triton/model_repository/kronos_predictor/1/: model.py
reports/: zeroshot_2026-05-01.md
scripts/: 00_bootstrap.sh  01_smoke_test.py  02_download_models.py  03_run_webui.sh  04_serve_api.sh  05_finetune.sh  06_fetch_all_data.sh  07_finetune_max.sh  brev_finetune_setup.sh  brev_setup.sh
webui_streamlit/: app.py
